Mythic/style.css
:root {
    font-family: "M PLUS Rounded 1c", sans-serif;
    font-weight: 500;
    letter-spacing: 0px;
    font-style: normal;
    font-size: 2em;

    --progress: 50;
    --progress-smooth: 50;
    filter: hue-rotate(calc((var(--progress-smooth)) * 1deg));
    --bg-color: rgb(129, 129, 220);
    background-color: var(--bg-color);
    background: linear-gradient(to bottom left, #8f94fb, #676eea);  
    color: #211e32;
}

.centerDiv {
    display: grid;
    justify-content: center;

    position: relative;
    min-height: 100svh;

    text-align: center;
}

.sample {
    display: none !important;
}

.horizontal {
    display: grid;
    grid-template-columns: auto auto;
    align-items: center;
    justify-content: left;
    
    gap: 15px;
    flex-wrap: wrap;
}

.centerHorizontal {
    display: grid;
    grid-template-columns: auto auto;
    align-items: center;
    justify-content: center;
    
    gap: 15px;

    padding-bottom: 35px;

    color: rgb(65, 65, 151);
}

.centerHorizontal h3 {
    margin: 0px;
    font-size: 1em;
}

.centerHorizontal .material-symbols-outlined {
    color: rgb(65, 65, 151);
}

#eventGeneratorBox {
    justify-content: center;
    grid-template-columns: repeat(6, 1fr);
    width: fit-content;
    justify-self: center;
    gap: 5px;
}

#eventGeneratorBox div {
    grid-column-start: span 2;
    cursor:pointer;
    user-select: none;
    height: 60px;
}
#eventGeneratorBox div p {
    margin: 0 !important;
}

button {
    background: transparent;
    border: 0px;
    transition-duration: .03s;
    width: 50px;
    border-radius: 10px;
}

button:hover {
    background: rgba(36, 36, 36, 0.209);
    border: 0px;
    transition-duration: .1s;
}
button:active {
    background: rgba(36, 36, 36, 0.409);
    border: 0px;
}

#resultDiv {
    display: inline-grid;
    align-self: center;
    outline: #453b80 solid 3px;
    background-color: #6b71ed55;

    border-radius: 5px;
    padding-top: 30px;
    padding-bottom: 40px;
    padding: 20px;
    margin-top: 20px;

    width: fit-content;
    min-width: 30vw;
}

#resultDiv h3{
    margin-top: 0px;
}

#resultText {
    font-size: 2em;
    letter-spacing: 1.5px;
    margin-top: -20px;
    margin-bottom: -20px;
    user-select: none;
    font-family: "Marcellus", serif;
    
    font-weight: 100;
}

::selection {
    background-color: hsl(calc(129 + var(--progress) * 1), 40%, 80%);;
}

#backgroundDiv {
    position: relative;
    display: grid;
    grid-template-columns: auto auto auto auto;
}

.center {
    width: 100%;
    justify-content: center !important;
}
  
.appearAnimation {
    animation-name: textChange;
    animation-duration: .1s;
    animation-iteration-count: 1;
    animation-timing-function: ease;
    animation-fill-mode: forwards;
}

@keyframes textChange {
    from {
        transform: rotate(10deg) scale(0) skew(10deg);
    }
    to {
        transform: rotate(0deg) scale(1) skew(0deg);
    }
}

